# AutoProver

./: .test_pair.aux  Makefile  PHASE1C_BREAKTHROUGH_SUMMARY.md  PHASE1C_FILE_HASHES.txt  PUBLICATION_COMPLETE.md  README.md  VERIFICATION_COMPLETE.md  aes_wide_trail_goal.v  autoprover  autoprover.py  bug_analysis.md  consolidated_comprehensive_paper.tex  demo_bot_system.sh  demo_cryptographic_proofs.md  dune-project  gpu_install.sh  launch_bots.sh  paper_diagrams.py  test_aes_goal.txt  test_pair.glob  test_pair.v  test_pair.vo
config/: bot_deployment.json
docs/: ocaml_systems_language.md  system_ocaml_roadmap.md
formal_models/: .autoprover_core_fix.aux  .autoprover_correctness.aux  .autoprover_correctness_simple.aux  autoprover_core_fix.glob  autoprover_core_fix.v  autoprover_core_fix.vo  autoprover_correctness.glob  autoprover_correctness.v  autoprover_correctness_simple.glob  autoprover_correctness_simple.v  ocaml_bridge_correctness.v  type_error_analysis.v
proofs/: .lia.cache  .nvs_correctness.aux  .nvs_correctness_simple.aux  nvs_correctness.glob  nvs_correctness.v  nvs_correctness_simple.glob  nvs_correctness_simple.v  nvs_correctness_simple.vo
src/: dune
src/bots/: coqgym_bot.py  coqhammer_bot.py  gpu_coqgym_bot.py  proverbot9001_bot.py  real_coqgym_bot.py  real_proverbot_bot.py  safe_coq_checker.py  simple_coq_bot.py  specialist_bots.ml  tactictoe_bot.py
src/config/: deployment_manager.ml
src/core/: claude_interface.ml  compile_fixed_bridge.sh  compile_ocaml_bridge.sh  ghostdag_consensus.py  ghostdag_memory_bus.ml  ghostdag_native_extraction.ml  (+13 more)
(+3 files in other folders)
